# nucula

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/blst/: CMakeLists.txt  README.md
components/blst/blst/src/: no_asm.h
components/blst/port/: blst_mpi.c
components/blst/port/include/: blst_mpi.h
components/pn532/: CMakeLists.txt  pn532.c  pn532_i2c.c  pn532_spi.c  pn532_uart.c
components/pn532/include/: pn532.h
components/pn7160/: CMakeLists.txt  nci.c
components/pn7160/include/: nci.h
components/secp256k1/: CMakeLists.txt  libsecp256k1-config.h
main/: CMakeLists.txt  Kconfig.projbuild  base64url.cpp  base64url.hpp  bip39.c  bip39.h  bip39_english.h  board.h  cashu.hpp  cashu_cbor.cpp  cashu_cbor.hpp  cashu_json.cpp  cashu_json.hpp  cashu_suite.h  commands.h  commands_common.cpp  commands_seed.cpp  commands_system.cpp  commands_wallet.cpp  console.cpp  console.h  crypto.c  crypto.h  crypto_bls.c  crypto_bls_test.c  crypto_bls_test.h  crypto_test.c  crypto_test.h  display.cpp  display.h  hex.c  hex.h  http.c  http.h  i2c_bus.c  i2c_bus.h  idf_component.yml  keypad.c  keypad.h  keyset.cpp  (+30 more)
